Creadas 2 actividades Listado y formulario La introduccion de datos se realiza desde el formulario El listado no se visualiza correctamente.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".actividad1">
+        <activity android:name=".actividades.TumbasFormulario">
+        </activity>
+        <activity android:name=".actividades.TumbasListaSimple">
         </activity>
     </application>
 
