--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
         </activity>
         <activity android:name=".actividades.Oliver">
         </activity>
+        <activity android:name=".actividades.VerTumbas">
+        </activity>
     </application>
 
 </manifest>
